--- a/tribute page/styles.css
+++ b/tribute page/styles.css
@@ -3,12 +3,12 @@ body {
     font-weight: 400;
     font-style: normal;
     margin: 0;
-    background-color: #FFF8E7; /* Light cream background */
-    color: #333; /* Darker text color for better readability */
+    background-color: #FFF8E7; 
+    color: #333; 
 }
 
 header {
-    background-color: #FFF8E7; /* Light cream background */
+    background-color: #FFF8E7; 
     padding: 20px;
     text-align: center;
     border-bottom: 1px solid #333;
@@ -37,7 +37,7 @@ header {
 
 .header-home-link {
     text-decoration: none;
-    color: #333; /* Darker text color */
+    color: #333; 
     text-align: center;
 }
 
@@ -47,12 +47,12 @@ header {
     font-family: "Gaegu", sans-serif;
     font-weight: 700;
     font-style: normal;
-    color: #003DA5; /* Korean blue */
+    color: #003DA5; 
 }
 
 .header-small-print {
     font-size: 2em;
-    color: #757575; /* Grey color */
+    color: #757575; 
     font-family: "Gaegu", sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -77,7 +77,7 @@ main {
 }
 
 .widget {
-    background-color: #FFCD00; /* Korean yellow */
+    background-color: #FFCD00; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 12px 12px rgba(0, 0, 0, 0.3);
@@ -85,7 +85,7 @@ main {
 
 h2 {
     margin-bottom: 20px;
-    color: #C60C30; /* Korean red */
+    color: #C60C30; 
     font-size: 2em;
     font-weight: 700;
 }
@@ -97,8 +97,8 @@ input, button {
     font-size: 1em;
     border-radius: 5px;
     border: 1px solid #333;
-    background-color: #003DA5; /* Korean blue */
-    color: #FFF8E7; /* Light cream text color */
+    background-color: #003DA5; 
+    color: #FFF8E7;
 }
 
 button {
@@ -112,13 +112,13 @@ button:hover {
 
 .stopwatch {
     margin-top: 20px;
-    font-size: 3em; /* Make the timer text bigger */
-    color: #C60C30; /* Korean red */
+    font-size: 3em; 
+    color: #C60C30; 
     text-align: center;
-    padding: 20px; /* Add padding around the timer */
-    border: 3px solid #003DA5; /* Border with Korean blue color */
-    border-radius: 10px; /* Rounded corners */
-    background-color: #FFF8E7; /* Light cream background */
+    padding: 20px; 
+    border: 3px solid #003DA5; 
+    border-radius: 10px; 
+    background-color: #FFF8E7; 
 }
 
 .settings label {
@@ -138,8 +138,8 @@ button:hover {
 .settings button {
     width: 100%;
     padding: 10px;
-    background-color: #003DA5; /* Korean blue */
-    color: #FFF8E7; /* Light cream text color */
+    background-color: #003DA5; 
+    color: #FFF8E7; 
     border: none;
     cursor: pointer;
     font-size: 1em;
@@ -148,5 +148,5 @@ button:hover {
 }
 
 .settings button:hover {
-    background-color: #FFCD00; /* Korean yellow */
+    background-color: #FFCD00; 
 }
